--- a/sqlc.yml
+++ b/sqlc.yml
@@ -8,3 +8,7 @@ sql:
         package: "db"
         out: "internal/db"
         sql_package: "pgx/v5"
+        emit_empty_slices: true
+        emit_json_tags: true
+        omit_unused_structs: true
+        emit_pointers_for_null_types: true
