chore: remove temporary golangci-lint config

--- a/taskfile.yml
+++ b/taskfile.yml
@@ -24,7 +24,7 @@ tasks:
   
   lint:
     cmds:
-      - golangci-lint run -E gosec
+      - golangci-lint run
       - go vet ./...
       #- go run honnef.co/go/tools/cmd/staticcheck@latest -checks=all,-ST1000,-U1000 ./...
       #- go run golang.org/x/vuln/cmd/govulncheck@latest ./...
