--- a/taskfile.yml
+++ b/taskfile.yml
@@ -16,11 +16,11 @@ tasks:
 
   css:
     cmds:
-      - npx tailwindcss -i ./frontend/app.css -o ./internal/assets/static/app.css
+      - npx tailwindcss -i ./frontend/app.css --minify -o ./internal/assets/static/app.css
 
   js:
     cmds:
-      - npx esbuild ./frontend/app.js --bundle --outfile=./internal/assets/static/app.js
+      - npx esbuild ./frontend/app.js --bundle --minify --outfile=./internal/assets/static/app.js
 
   sql:
     cmds:
