--- a/taskfile.yml
+++ b/taskfile.yml
@@ -33,7 +33,7 @@ tasks:
   
   lint:
     cmds:
-      - golangci-lint run
+      - go run github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55.2 run
       - go vet ./...
   
   tidy:
