ci: move linter back into build step

--- a/taskfile.yml
+++ b/taskfile.yml
@@ -45,6 +45,7 @@ tasks:
     cmds:
       - npm install
       - task: pre
+      - task: lint
       - task: test
       - go build ./cmd/rhizome
 
