build: move css/js build steps into npm script for easier re-use in docker build step

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "esbuild": "^0.20.0",
     "htmx.org": "^1.9.10",
     "tailwindcss": "^3.4.1"
+  },
+  "scripts": {
+    "css": "tailwindcss -i ./frontend/app.css --minify -o ./internal/assets/static/app.css",
+    "js": "esbuild ./frontend/app.js --bundle --minify --outfile=./internal/assets/static/app.js"
   }
 }
