--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "esbuild": "^0.20.0",
     "htmx.org": "^1.9.10",
     "tailwindcss": "^3.4.1"
